--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - export AWS_KVS_LOG_LEVEL=3
   - make
   - ulimit -c unlimited -S
-  - timeout --signal=SIGABRT 60m ./tst/webrtc_client_test --gtest_filter="IceFunctionalityTest.IceAgentCandidateGatheringTest"
+  - timeout --signal=SIGABRT 60m ./tst/webrtc_client_test --gtest_filter="-IceFunctionalityTest.IceAgentCandidateGatheringTest"
 
 after_failure:
   - for i in $(find ./ -maxdepth 1 -name 'core*' -print); do gdb $(pwd)/tst/webrtc_client_test core* -ex "thread apply all bt" -ex "set pagination 0" -batch; done;
